--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,1 @@
-.App {
-  width: 100%;
-  min-height: 100vh;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-}
+/* App.css는 Tailwind를 사용하므로 비워둡니다 */
