--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,72 @@
 @tailwind components;
 @tailwind utilities;
 
+/* KoPubWorldBatang 폰트 정의 */
+@font-face {
+  font-family: 'KoPubWorldBatang';
+  src: local('KoPubWorldBatang Light'), local('KoPubWorldBatang-Light');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'KoPubWorldBatang';
+  src: local('KoPubWorldBatang Regular'), local('KoPubWorldBatang-Regular');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'KoPubWorldBatang';
+  src: local('KoPubWorldBatang Medium'), local('KoPubWorldBatang-Medium');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'KoPubWorldBatang';
+  src: local('KoPubWorldBatang Bold'), local('KoPubWorldBatang-Bold');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* KoPubWorldDotum 폰트 정의 */
+@font-face {
+  font-family: 'KoPubWorldDotum';
+  src: local('KoPubWorldDotum Light'), local('KoPubWorldDotum-Light');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'KoPubWorldDotum';
+  src: local('KoPubWorldDotum Regular'), local('KoPubWorldDotum-Regular');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'KoPubWorldDotum';
+  src: local('KoPubWorldDotum Medium'), local('KoPubWorldDotum-Medium');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'KoPubWorldDotum';
+  src: local('KoPubWorldDotum Bold'), local('KoPubWorldDotum-Bold');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 /* 프로젝트 컬러 변수 */
 :root {
   --color-primary: #102254;
